scrool fix on mobile 2

--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,7 @@ canvas {
   width: 100vw;
   height: 100vh;
   display: block;
+   touch-action: pan-y;
 }
 
 nav{
